--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
-  "name": "figters-roster",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.31",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.3"
-  }
+     "name": "figters-roster",
+     "version": "0.1.0",
+     "private": true,
+     "scripts": {
+          "dev": "next dev",
+          "build": "next build",
+          "start": "next start",
+          "lint": "next lint",
+          "prepare": "husky install",
+          "pre-commit": "yarn lint && yarn test",
+          "prettier": "yarn prettier --write .",
+          "test": "jest"
+     },
+     "dependencies": {
+          "@types/node": "18.15.11",
+          "@types/react": "18.0.31",
+          "@types/react-dom": "18.0.11",
+          "eslint": "8.37.0",
+          "eslint-config-next": "13.2.4",
+          "next": "13.2.4",
+          "react": "18.2.0",
+          "react-dom": "18.2.0",
+          "sass": "^1.60.0",
+          "stylelint-scss": "^4.6.0",
+          "typescript": "5.0.3"
+     },
+     "devDependencies": {
+          "husky": "^8.0.3",
+          "jest": "^29.5.0",
+          "prettier": "2.8.7",
+          "stylelint": "^15.4.0",
+          "stylelint-config-standard-scss": "^7.0.1"
+     }
 }
