--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/client": "^5.4.2",
+    "@sanity/image-url": "^1.0.2",
     "next": "13.2.4",
+    "next-sanity-image": "^6.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
+    "@sanity/cli": "^3.8.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
@@ -25,9 +31,9 @@
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "prettier": "2.8.7",
+    "sass": "^1.60.0",
     "stylelint": "^15.4.0",
     "stylelint-config-standard-scss": "^7.0.1",
-    "sass": "^1.60.0",
     "stylelint-scss": "^4.6.0",
     "typescript": "5.0.3"
   }
