--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^5.4.2",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/types": "^3.10.1",
     "next": "13.2.4",
     "next-sanity-image": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "sanity-types": "^1.0.1"
   },
   "devDependencies": {
     "@sanity/cli": "^3.8.3",
