--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/client": "^5.4.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/types": "^3.10.1",
+    "axios": "^1.4.0",
     "next": "13.2.4",
     "next-sanity-image": "^6.0.0",
     "react": "18.2.0",
